style: update hero image style to fix image squashing on smaller screen sizes

--- a/assets/css/sections/hero.css
+++ b/assets/css/sections/hero.css
@@ -40,6 +40,7 @@
   }
 
   .ecs-hero-img {
+    object-fit: cover;
     width: 45%;
     max-height: 450px;
   }
